# micromeasure

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
book/: book.toml
book/src/: SUMMARY.md  api-reference.md  concepts.md  concurrent.md  examples.md  getting-started.md  gpu-sharp-edges.md  gpu.md  introduction.md  linux-pmu.md  reports.md  single-threaded.md  vs-criterion.md
book/src/examples/: basic.md  concurrent-counters.md  concurrent-scenario.md  cuda-event-backend.md  custom-backend.md  custom-metrics.md  factory-builder.md  gpu-counters.md  gpu-domain.md  mixed-domain.md  throughput-units.md
examples/: basic.rs  concurrent_counters.rs  concurrent_scenario.rs  cuda_event_backend.rs  custom_backend.rs  custom_metrics.rs  factory_builder.rs  gpu_counters.rs  gpu_domain.rs  mixed_domain.rs  throughput_units.rs
native/: gpu_counters.cpp
src/: bench.rs  launcher.rs  lib.rs  session.rs  table.rs  threading.rs
src/bench/: affinity.rs  backend.rs  cuda.rs  gpu_counters.rs  perf.rs  stats.rs
